add VisiData spreadsheet app

--- a/base-hpc.yml
+++ b/base-hpc.yml
@@ -11,6 +11,7 @@ dependencies:
   - pigz # parallel gzip
   - tmux
   - micro # text editor
+  - visidata # spreadsheet processor
   - bpytop # htop, but awesome
 ## BIO
   - seqmagick
