--- a/base-hpc.yml
+++ b/base-hpc.yml
@@ -6,7 +6,8 @@ dependencies:
 ## TOOLS
   - mamba # faster conda
   - pip
-  - mawk # faster awk
+#  - mawk=1.3.4 # faster awk (default in Ubuntu)
+  - gawk # featurefull awk
   - miller # data processor
   - pigz # parallel gzip
   - tmux
@@ -29,6 +30,12 @@ dependencies:
   - seqkit
 ## R
   - r-base=4
-  - r-essentials
+#  - r-essentials # includes jupyter
+  - r-tidyverse
+  - r-future # parallel programming
+  - r-future.apply
+  - r-furrr
   - r-ape
+  - r-seqinr
+  - r-vcfr
   - radian # Julia/Jupyter style CLI
